@@ -1,3 +1,3 @@
 #define AUTHOR  "Frank B. Brokken (f.b.brokken@rug.nl)";
-#define VERSION "0.91.01"
+#define VERSION "0.92.00"
 #define YEARS   "2018"
