@@ -44,10 +44,11 @@ void Client::checkCompleted(WIPdata &wipData) const
         )
     );
     
-    g_log << wipData.pidCid() << " DONE" << endl;
-
     wipData.remove();
 }
+
+
+
 
 
 
