@@ -29,8 +29,8 @@ U kunt niet verder gaan met een volgend deel voordat u &#x2018;verstuur&#x2019;
 hebt aangeklikt. Hiermee worden uw antwoorden opgeslagen.
 <p>
 
-Wanneer u tussentijds het onderzoek afbreekt worden antwoorden die nog niet
-verstuurd zijn niet opgeslagen.
+Wanneer u tussentijds het onderzoek afbreekt worden uw inmiddels gegeven
+antwoorden niet opgeslagen.
 <p>
 
 U wordt verzocht om het gehele onderzoek in een keer te doorlopen.
